# toolbox

./: .cursorrules  .gitignore  AGENTS.md  DEPLOYMENT.md  GEMINI.md  JOURNAL.md  QNAP831X_Final_Snapshot.md  README.md  check_folder.py  check_history_sheet.py  check_plaud_drive_files.py  create_archive_plaud_folder.py  create_folders.py  create_other_folder.py  create_plaud_folder.py  create_staging_folder.py  create_transcripts_folder.py  fetch_folder_names.py  fetch_sheet_headers.py  find_folders.py  find_folders_v2.py  find_missing_transcripts.py  find_plaud_id.py  generate_staging_report.py  gmail_ingest.py  group_plaud_files.py  identify_parent.py  implementation_plan_sheets.md  list_direct_children.py  list_nested_plaud.py  list_pkm_ids.py  list_pkm_structure.py  list_real_plaud.py  list_subfolder_contents.py  plaud_cleanup_dryrun.py  pyproject.toml  pytest.ini  refresh_uptown.py  requirements-dev.txt  requirements.txt  (+4 more)
.agent/: rules.md  task.md
.github/: pull_request_template.md
config/: email_extractor_config.json  folder_config.json  llm_routing.yaml  secrets.env.template  token_inventory.json  token_inventory.yaml
core/: ai.py  drive.py  google.py
docs/: ARCHITECTURE.md  BACKLOG.md  CREDENTIALS.md  GEMMA_BENCHMARKS.md  PRIORITIZATION_DRAFT.md  SETUP.md  audit_report_149_152.md  drive-file-organization.md  phase1_comment.txt  phase2_comment.txt  phase3_comment.txt  phase4_comment.txt  phase5_comment.txt  plan_issue_162_test_mocks.md  walkthrough.md  workspace_backup_plan_2026-04-05.md
garmin/: requirements.txt  run_sync.sh  sync.py
lib/: __init__.py  (+16 more)
(+151 files in other folders)
