[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox"
version = "0.1.0"
description = "Tariq's Automation Toolbox"
authors = [{name = "Tariq Khan", email = "takhan@gmail.com"}]
dependencies = [
    "google-auth-oauthlib",
    "google-api-python-client",
]

[tool.setuptools.packages.find]
where = ["."]
